# GarimpaAI

./: .gitignore  Entrega_final  Entrega_final.ipynb  README.md  pyproject.toml  requirements.txt
src/garimpaai/: __init__.py  __main__.py  analysis.py  app.py  browser.py  interactive.py  launcher.py  reporting.py  scrapers.py  text_utils.py
