[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garimpaai"
version = "0.1.0"
description = "GarimpaAI - Web scraping de preços em marketplaces (Amazon/Americanas)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "selenium>=4.10",
  "webdriver-manager>=4.0",
  "beautifulsoup4>=4.12",
  "pandas>=2.0",
  "requests>=2.31",
  "matplotlib>=3.7",
  "seaborn>=0.13",
]

[project.scripts]
garimpaai = "garimpaai.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
